--- a/views/boilerplate.ejs
+++ b/views/boilerplate.ejs
@@ -3,7 +3,7 @@
 <html lang="en">
   <head>
 
-    <title>Jumbotron Template for Bootstrap</title>
+    <title></title>
     <!-- <link rel="stylesheet" href="/css/bootstrap-sandstone.min.css"> -->
     <link rel="stylesheet" href="https://bootswatch.com/sandstone/bootstrap.min.css">
   </head>
