--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -13,16 +13,12 @@
 
     <% include ./partials/navbar %>
 
-    <div class="container">
-      <!-- Example row of columns -->
 
     <%- body -%>
 
 
-    </div> <!-- /container -->
-
       <% include ./partials/footer %>
-      <script src="/js/jquery.min.js"></script>
-      <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+      <% include ./partials/javascriptOnly %>
+
   </body>
 </html>
