--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -7,6 +7,14 @@
       <a class="navbar-brand" href="#">Project name</a>
     </div>
 
+    <li><a class="dropdown-toggle" data-toggle="dropdown" href="#">Categories</a>
+      <ul class="dropdown-menu">
+        <% for (var i = 0; i < categories.length ; i++) { %>
+          <li><a href="/products/<%= categories[i].id %>"><%= categories[i].name %></a></li>
+        <% } %>
+      </ul>
+    </li>
+
     <ul class="nav navbar-nav navbar-right">
       <% if(!user) {%>
       <li><a class="dropdown-toggle" data-toggle="dropdown" href="#">Signup / Login</a>
@@ -18,7 +26,6 @@
 
       <% } else {%>
       <li><a class="dropdown-toggle" data-toggle="dropdown" href="#"><%= user.profile.name %></a>
-
         <ul class="dropdown-menu">
           <li><a href="/profile">Profile</a></li>
           <li><a href="/logout">Logout</a></li>
