added search functionality to api.js, note function(req,res,next) must be in the correct order otherwise it will cause type error undefined issues

--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -5,3 +5,12 @@ body {
 #navbar-gap {
   margin-top: -5%;
 }
+
+.thumbnail {
+  height: 350px
+}
+
+.jumbotron-2 {
+  padding: 15px;
+  padding-top: 25px;
+}
