--- a/views/main/product-main.ejs
+++ b/views/main/product-main.ejs
@@ -1,11 +1,10 @@
 <% layout('layout') %>
 
 <!-- Main jumbotron for a primary marketing message or call to action -->
-<div class="jumbotron" id="navbar-gap">
+<div class="jumbotron jumbotron-2" id="navbar-gap">
   <div class="container">
-    <h1> Shop Smart, Save Big! </h1>
+    <h2> Shop Smart, Save Big! </h2>
     <p> Find your favourite product </p>
-
     <!-- <p><a class="btn btn-primary btn-lg" href="/signup" role="button">Signup &raquo;</a></p> -->
   </div>
 </div>
@@ -13,14 +12,14 @@
 <div class="container">
   <div class="row">
     <% for (var i=0 ; i< products.length ; i++) { %>
-    <div class="col-md-4">
+    <div class="col-md-3">
       <a href="/product/<%= products[i]._id %>">
         <div class="thumbnail">
           <img src="<%= products[i].image %>" alt="">
           <div class="caption">
             <h3><%= products[i].name %></h3>
             <p><%= products[i].category.name %></p>
-            <p><%= products[i].price %></p>
+            <p>$<%= products[i].price %></p>
           </div>
         </div>
       </a>
