--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -4,7 +4,7 @@
       <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
         <span class="sr-only">Toggle navigation</span>
       </button>
-      <a class="navbar-brand" href="#">Project name</a>
+      <a class="navbar-brand" href="#">Shop Smart</a>
     </div>
 
     <form class="navbar-form navbar-left" action="/search" method="post">
@@ -14,15 +14,14 @@
       </div>
     </form>
 
-    <li><a class="dropdown-toggle" data-toggle="dropdown" href="#">Categories</a>
+    <ul class="nav navbar-nav navbar-right">
+      <li><a class="dropdown-toggle" data-toggle="dropdown" href="#">Categories</a>
       <ul class="dropdown-menu">
         <% for (var i = 0; i < categories.length ; i++) { %>
           <li><a href="/products/<%= categories[i].id %>"><%= categories[i].name %></a></li>
         <% } %>
       </ul>
     </li>
-
-    <ul class="nav navbar-nav navbar-right">
       <% if(!user) {%>
       <li><a class="dropdown-toggle" data-toggle="dropdown" href="#">Signup / Login</a>
         <ul class="dropdown-menu">
