--- a/views/main/product-main.ejs
+++ b/views/main/product-main.ejs
@@ -3,9 +3,18 @@
 <!-- Main jumbotron for a primary marketing message or call to action -->
 <div class="jumbotron jumbotron-2" id="navbar-gap">
   <div class="container">
-    <h2> Shop Smart, Save Big! </h2>
-    <p> Find your favourite product </p>
-    <!-- <p><a class="btn btn-primary btn-lg" href="/signup" role="button">Signup &raquo;</a></p> -->
+    <h2 class="text-center"> Find your favourite product </h2>
+    <p class="text-center"> Search our products </p>
+    <div class="row">
+      <div class="col-md-6 col-md-offset-3">
+        <div class="input-group col-md-12">
+          <span class="input-group-btn">
+          <input type="text" name="search_term" placeholder="Search for a product..." class="form-control input-lg">
+          <button type="submit" class="btn btn-primary btn-lg"><i class="glyphicon glyphicon-search"></i></button>
+          </span>
+        </div>
+      </div>
+    </div>
   </div>
 </div>
 
