--- a/views/main/product-main.ejs
+++ b/views/main/product-main.ejs
@@ -9,7 +9,7 @@
       <div class="col-md-6 col-md-offset-3">
         <div class="input-group col-md-12">
           <span class="input-group-btn">
-          <input type="text" name="search_term" placeholder="Search for a product..." class="form-control input-lg">
+          <input type="text" id="search" name="search_term" placeholder="Search for a product..." class="form-control input-lg">
           <button type="submit" class="btn btn-primary btn-lg"><i class="glyphicon glyphicon-search"></i></button>
           </span>
         </div>
@@ -19,7 +19,7 @@
 </div>
 
 <div class="container">
-  <div class="row">
+  <div class="row" id="searchResults">
     <% for (var i=0 ; i< products.length ; i++) { %>
     <div class="col-md-3">
       <a href="/product/<%= products[i]._id %>">
